manifests/mlflow-controller-0.1.8.tgz-manifest.yaml
---
# Source: mlflow-controller/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-mlflow-controller-ui
  labels:
    app: mlflow-controller-ui
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mlflow-controller-ui
---
# Source: mlflow-controller/templates/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mlflow-controller-ui
  labels:
    app: mlflow-controller-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-controller-ui
  template:
    metadata:
      labels:
        app: mlflow-controller-ui
    spec:
      serviceAccountName: my-release-mlflow-controller
      securityContext:
        {}
      containers:
        - name: mlflow-controller
          securityContext:
            {}
          image: "tachyongroup/mlflow-deployment-controller-ui:mlflow-controller-0.1.8"
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            {}
---
# Source: mlflow-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-mlflow-controller
  labels:
    helm.sh/chart: mlflow-controller-0.1.8
    app.kubernetes.io/name: mlflow-controller
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.1.8"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mlflow-controller
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlflow-controller
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: my-release-mlflow-controller
      securityContext:
        {}
      containers:
        - name: mlflow-controller
          securityContext:
            {}
          image: "tachyongroup/mlflow-deployment-controller:mlflow-controller-0.1.8"
          imagePullPolicy: Always
          resources:
            {}
---
# Source: mlflow-controller/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-mlflow-controller
  labels:
    app: mlflow-controller-ui
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "aui-secret"
      secretName: mdcv2.mlops.wianai.com
  rules:
    - host: "mdcv2.mlops.wianai.com"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-release-mlflow-controller-ui
                port:
                  number: 8000
